# ai-devos

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.ai/tasks/TASK-0001/: approval.md  plan.md  review-01.md  review-02.md  status.yml  task.md
.ai/tasks/TASK-0002/: approval.md  plan.md  review-01.md  status.yml  task.md
.ai/tasks/TASK-0003/: approval.md  evidence.md  final-approval.md  implementation.md  plan.md  review-01.md  status.yml  task.md
.ai/tasks/TASK-0004/: approval.md  baseline.json  evidence.md  implementation.md  plan.md  review-01.md  status.yml  task.md
.ai/tasks/TASK-0005/: approval.md  plan.md  review-02.md  status.yml  task.md
.ai/tasks/TASK-0006/: approval.md  evidence.md  implementation.md  plan.md  review-01.md  review-02.md  status.yml  task.md
.ai/tasks/TASK-0007/: approval.md  evidence.md  final-acceptance.md  implementation.md  plan.md  review-01.md  status.yml  task.md
docs/: AI-DevOS-V4.2.1.md
src/aidevos/: __init__.py  __main__.py  adapter.py  cli.py  handoff.py  task_transition.py  task_validation.py
tests/: test_adapter.py  test_cli.py  test_handoff.py  test_task_transition.py  test_task_validation.py
tests/fixtures/handoffs/: approval.md  plan.md  task.md
tests/fixtures/handoffs/context/: overview.md
tests/fixtures/tasks/: checked_ac.md  extra_content.md  malformed.md  valid.md
