[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidevos"
dynamic = ["version"]
description = "Repository-native pre-commit governance and evidence CLI for AI-generated code"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
]

[project.scripts]
aidevos = "aidevos.cli:main"

[tool.hatch.version]
path = "src/aidevos/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aidevos"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
